perf(search): skip child hydration on V2 default search
V2 default search previously fetched every item child document with a
narrow call-number projection on every request, while skipping holdings
entirely. V1 default, by contrast, returns neither holdings nor items
unless expandAll=true. Align V2 with V1: default mode now performs zero
child fetches and returns empty holdings/items arrays; expandAll=true
continues to hydrate both with full field sets.

No consumer on the V2 search path was reading the narrow item
projection (verified across post-processors, browse/indexing code, and
CQL converters), so removing it drops one scroll round-trip per default
search without losing any response data. Flip the existing consortium-
scope test to expandAll=true so it still exercises both child fetches,
and add a new test locking in the zero-hydration default path.